# ExtraGraphAnalyst

./: .gitignore  CMakeLists.txt  README.md  build.bat
analysis/: __init__.py  data_loader.py  indicators.py  predictors.py  yahoo_finance.py
python/: console_env.py  data_loader.py  indicators.py  predictors.py
resources/: app.rc  app.rc.in
scripts/: README.md  SCRIPTING.md  example_indicator.py  example_predictor.py
src/: ChartWindow.cpp  ChartWindow.h  DataLoader.h  MainWindow.cpp  MainWindow.h  PythonBridge.cpp  PythonBridge.h  WorkspaceFile.cpp  WorkspaceFile.h  main.cpp
